--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "task-tracker",
+  "name": "lost-ark-task-tracker",
   "version": "0.1.0",
+  "homepage": "https://lost-ark-task-tracker.github.io/lost-ark-task-tracker",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -20,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
